2006-03-08  Michael Stucki  <michael@typo3.org>

	* Changed the globalString condition to allow PCRE regular expressions only if wrapped in dashes "/"
	* Fixed bug #331: Support IPv6 addresses (many thanks to Sven Wilhelm)
	* Fixed a big problem with temporary content stored to cache_pages
	* !!! Changed $TYPO3_CONF_VARS['SYS']['setDBinit'] from array to a string (separated by newline)
	* Minor changes to config_default.php (comments were not displayed)

2006-03-08  Sebastian Kurfuerst  <sebastian@garbage-group.de>

	* Updated logos in the backend to reflect the new CI

2006-03-08  Karsten Dambekalns  <karsten@typo3.org>

	* EM: Fixed three small issues, mostly cosmetic.
	* Install Tool: Using new logo now, uuuuhhh! Changes CSS so links are colored again.

2006-03-08  Dmitry Dulepov  <typo3@accio.lv>

	* Added <onChange> tag to flexforms to enable automatic form reloading when tagged field changes. Useful for creating dynamic flexforms.

2006-03-08  Ingmar Schlecht  <ingmar@typo3.org>

	* Set the default value of config.inlineStyle2TempFile to 1 and config.removeDefaultJS to 'external' if compatversion is set to > 4.0.0. This means default styles of extensions and default JS functions are now automatically put to files like typo3temp/stylesheet_ec23910b0b.css by default.
	* Fixed bug #2794: Misplaced " quote in typo3/class.browse_links.php

2006-03-08  Bernhard Kraft  <kraftb@kraftb.at>

	* Implemented featured #2695: Tables can not get hidden in Web>List. Now this can get accomplished via Page/User/Group TS-Config

2006-03-08  Rene Fritz  <r.fritz@colorcube.de>

	* Enhanced MM handling in TCE for usage from foreign tables. Means MM relations can be edited in TCEForms from both ends of the relation.

2006-03-07  Sebastian Kurfuerst  <sebastian@garbage-group.de>

	* Fixed skin issue #2766: class.t3lib_tceforms.php / type="checkbox" / bugs
	* Fixed skin issue #2317: The background-color on highlighted items in alt_db_navframe.php